Added D3JS chart

--- a/public/main.css
+++ b/public/main.css
@@ -102,6 +102,13 @@ main article {
     margin: 20px;
 }
 
+polyline {
+    fill: none;
+    stroke: black;
+    stroke-width: 2px;
+    opacity: .3;
+}
+
 @media screen and (min-width: 768px) {
     main article {
         margin: 10px;
