Added Assignment 5 reqs.

--- a/personal-budget/src/app/homepage/homepage.html
+++ b/personal-budget/src/app/homepage/homepage.html
@@ -1,4 +1,5 @@
 <main class="center" id="main" role="main">
+    <pb-breadcrumbs></pb-breadcrumbs>
         <!-- This is a Semantic HTML Change -->
         <section class="page-area">
 
