--- a/personal-budget/src/app/menu/menu.html
+++ b/personal-budget/src/app/menu/menu.html
@@ -4,6 +4,7 @@
             <li><a href="" aria-label="Go to homepage">Home</a></li>
             <li><a href ="/about" aria-label="Learn more about this app">About</a></li>
             <li><a href="/login" aria-label="Login to your account">Login</a></li>
+            <li><a href="/contact" aria-label="Contact Me">Contact</a></li>
             <li><a href="https://google.com" aria-label="Open Google in a new tab">Google</a></li>
         </ul>
     </nav>
