--- a/personal-budget/src/styles.scss
+++ b/personal-budget/src/styles.scss
@@ -47,12 +47,13 @@ header.hero {
     padding-top: 40px;
 }
 
-header.hero h1,
+header.hero li,
 header.hero h2 {
     text-align: center;
     margin: 0;
 }
 
+header.hero li,
 header.hero h1 {
     color: #fff;
     font-size: 4.2em;
