--- a/personal-budget/src/app/hero/hero.html
+++ b/personal-budget/src/app/hero/hero.html
@@ -1,4 +1,4 @@
 <header class="hero" role="banner">   
-    <h1>Personal Budget</h1>
+    <li><a href="" aria-label="Go to homepage">Personal Budget</a></li>
     <h2>A personal-budget management app</h2>
 </header>
